--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <div class="text-service" id="box">
                     <div class="img" id="img-servicos6"></div>
-                    <h3>Detecção e Alarme de Incêndio</h3>
+                    <h3>Detecção e Alarme <br>de Incêndio</h3>
                 </div>
             </div>
         </section>
