--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     </header>
 
     <main>
+        <section class="section-d">
+            <div class="text-banner">
+                <h1>Prestador de Serviços</h1>
+                <p>Elétrica predial, industrial, automação, construção civil, apoio administrativo, logística e locação de veículos.</p>
+            </div>
+            <div class="img-banner"></div>
+
+        </section>
+
         <section class="section-a">
             <div class="servicos-fhm">
                 <h1>NOSSOS SERVIÇOS</h1>
