--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mediastyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -39,38 +40,43 @@
             <div class="servicos-fhm">
                 <h1>NOSSOS SERVIÇOS</h1>
 
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos1"></div>
-                    <h3>Construção Civil</h3>
-                </div>
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos2"></div>
-                    <h3>Elétrica e Automação</h3>
-                </div>
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos3"></div>
-                    <h3>Apoio Administrativo</h3>
-                </div>
-
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos4"></div>
-                    <h3>Serviços de Engenharia</h3>
+                <div class="flex-box1">
+                    <div class="inline-box" id="box">
+                        <div class="img" id="img-servicos1"></div>
+                        <h3>Construção Civil</h3>
+                    </div>
+                    <div class="inline-box" id="box">
+                        <div class="img" id="img-servicos2"></div>
+                        <h3>Elétrica e Automação</h3>
+                    </div>
+                    <div class="inline-box" id="box">
+                        <div class="img" id="img-servicos3"></div>
+                        <h3>Apoio Administrativo</h3>
+                    </div>
                 </div>
 
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos5"></div>
-                    <h3>Transporte e Logística</h3>
+                <div class="flex-box2">
+                    <div class="inline-box" id="box">
+                        <div class="img" id="img-servicos4"></div>
+                        <h3>Serviços de Engenharia</h3>
+                    </div>
+                    <div class="inline-box" id="box">
+                        <div class="img" id="img-servicos5"></div>
+                        <h3>Transporte e Logística</h3>
+                    </div>
+                    
+                    <div class="inline-box" id="box">
+                        <div class="img" id="img-servicos7"></div>
+                        <h3>Suporte de TI</h3>
+                    </div>
                 </div>
+                    <div class="flex-box3">
+                        <div class="inline-box" id="box">
+                            <div class="img" id="img-servicos6"></div>
+                            <h3>Detecção e Alarme <br>de Incêndio</h3>
+                        </div>
+                    </div>
                 
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos7"></div>
-                    <h3>Suporte de TI</h3>
-                </div>
-
-                <div class="text-service" id="box">
-                    <div class="img" id="img-servicos6"></div>
-                    <h3>Detecção e Alarme <br>de Incêndio</h3>
-                </div>
             </div>
         </section>
 
