--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <div class="logo-header">
             <img src="img/logo.png" alt="Logo header">
         </div>
-        <nav>
+        <div class="menubar"><span class="material-symbols-outlined" onclick="clickMenu()"> menu</span></div>
+        <nav id="nav">
+
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Quem somos</a></li>
@@ -101,5 +103,23 @@
             <h4>Tell: <a href="#">27 997525063</a></h4>
         </div>
     </footer>
+
+    <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768)  {
+                nav.style.display = 'block'
+            }else {
+                nav.style.display = 'none'
+            }
+        }
+
+        function clickMenu () {
+            if (nav.style.display == 'block') {
+                nav.style.display = 'none'
+            }else{
+                nav.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
