--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </section>
 
         <section class="section-c">
-            <button>Solicite seu orçamento</button>
+            <a href="pages/orcamento.html"><button>Solicite seu orçamento</button></a>
         </section>
     </main>
 
