--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <nav id="nav">
 
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Orçamento</a></li>
+                <li><a href="pages/orcamento.html">Orçamento</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
@@ -78,7 +78,6 @@
                             <h3>Detecção e Alarme <br>de Incêndio</h3>
                         </div>
                     </div>
-                
             </div>
         </section>
 
