--- a/pages/orcamento.html
+++ b/pages/orcamento.html
@@ -19,7 +19,7 @@
         <nav id="nav">
 
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="../index.html" target="_parent">Home</a></li>
                 <li><a href="#">Quem somos</a></li>
                 <li><a href="#">Orçamento</a></li>
                 <li><a href="#">Contato</a></li>
