--- a/pages/orcamento.html
+++ b/pages/orcamento.html
@@ -32,7 +32,7 @@
                 <h1>Orçamento</h1>
             </div>
             <div class="form">
-                <form action="#">
+                <form action="#" method="get">
                     <div class="form-group">
                         <label for="nameid">Nome Completo</label>
                         <input type="text" name="name" id="nameid" placeholder="Seu nome">
