--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="#">Quem somos</a></li>
-                <li><a href="pages/orcamento.html">Orçamento</a></li>
+                <li><a href="./pages/quemsomos/quemsomos.html">Quem somos</a></li>
+                <li><a href="pages/orcamento/orcamento.html">Orçamento</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
@@ -89,7 +89,7 @@
         </section>
 
         <section class="section-c">
-            <a href="pages/orcamento.html"><button>Solicite seu orçamento</button></a>
+            <a href="pages/orcamento/orcamento.html"><button>Solicite seu orçamento</button></a>
         </section>
     </main>
 
