--- a/pages/orcamento/orcamento.html
+++ b/pages/orcamento/orcamento.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./orcamento.css">
+    <link rel="stylesheet" href="./mediaorcamento.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,15 +14,15 @@
 <body onresize="mudouTamanho()">
     <header>
         <div class="logo-header">
-            <img src="../img/logo.png" alt="Logo header">
+            <img src="../../img/logo.png" alt="Logo header">
         </div>
         <div class="menubar"><span class="material-symbols-outlined" onclick="clickMenu()"> menu</span></div>
         <nav id="nav">
 
             <ul>
-                <li><a href="../index.html" target="_parent">Home</a></li>
-                <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Orçamento</a></li>
+                <li><a href="../../index.html" target="_parent">Home</a></li>
+                <li><a href="../quemsomos/quemsomos.html">Quem somos</a></li>
+                <li><a href="../orcamento/orcamento.html">Orçamento</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
@@ -59,7 +60,7 @@
 
     <footer>
         <div class="logo-footer">
-            <img src="../img/logo-corte.png" alt="Logo footer">
+            <img src="../../img/logo-corte.png" alt="Logo footer">
         </div>
         <div class="text-footer">
             <h4>E-mail: <a href="#">comercial@fhmservicos.com</a></h4>
