--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section class="section-d">
             <div class="text-banner">
-                <h1>Prestador de Serviços</h1>
+                <h1>Prestação de Serviços</h1>
                 <p>Elétrica predial, industrial, automação, construção civil, apoio administrativo, logística e locação de veículos.</p>
             </div>
             <div class="img-banner"></div>
