--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                             <div class="img" id="img-servicos6"></div>
                             <h3>Detecção e Alarme <br>de Incêndio</h3>
                         </div>
+                        <div class="inline-box" id="box">
+                            <div class="img" id="img-servicos8"></div>
+                            <h3>Regularização Fundiaria</h3>
+                        </div>
                     </div>
             </div>
         </section>
