--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </div>
                         <div class="inline-box" id="box">
                             <div class="img" id="img-servicos8"></div>
-                            <h3>Regularização Fundiaria</h3>
+                            <h3>Regularização Fundiária</h3>
                         </div>
                     </div>
             </div>
