--- a/pages/quemsomos/quemsomos.html
+++ b/pages/quemsomos/quemsomos.html
@@ -23,7 +23,7 @@
                 <li><a href="../../index.html" target="_parent">Home</a></li>
                 <li><a href="./quemsomos.html">Quem somos</a></li>
                 <li><a href="../orcamento/orcamento.html">Orçamento</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="../contato/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -38,12 +38,12 @@
         <div class="list">
             <div class="lista">
                 <ul>
-                    <li><strong>Elétrica Predial e Industrial</strong> Nossos especialistas em elétrica predial e industrial são treinados para atender a todas as suas necessidades elétricas, desde instalações e manutenção até projetos de automação avançada.</li>
-                    <li><strong>Automação</strong> A automação é o futuro, e estamos comprometidos em ajudar nossos clientes a abraçar essa revolução. Desenvolvemos soluções personalizadas para otimizar processos e melhorar a eficiência.</li>
-                    <li><strong>Construção Civil</strong> Com uma equipe experiente de profissionais da construção civil, realizamos projetos que abrangem desde pequenas reformas até grandes empreendimentos, sempre com qualidade e eficiência.</li>
-                    <li><strong>Apoio Administrativo</strong> Oferecemos serviços de apoio administrativo que permitem que nossos clientes se concentrem em suas atividades principais, enquanto cuidamos dos detalhes burocráticos.</li>
-                    <li><strong>Logística</strong> Nossa expertise em logística garante que os produtos cheguem ao destino de forma eficiente e segura, otimizando a cadeia de suprimentos.</li>
-                    <li><strong>Locação de Veículos</strong> Com uma frota diversificada de veículos, fornecemos opções de locação para atender às necessidades de transporte de nossos clientes.</li>
+                    <li><span>Elétrica Predial e Industrial</span> Nossos especialistas em elétrica predial e industrial são treinados para atender a todas as suas necessidades elétricas, desde instalações e manutenção até projetos de automação avançada.</li>
+                    <li><span>Automação</span> A automação é o futuro, e estamos comprometidos em ajudar nossos clientes a abraçar essa revolução. Desenvolvemos soluções personalizadas para otimizar processos e melhorar a eficiência.</li>
+                    <li><span>Construção Civil</span> Com uma equipe experiente de profissionais da construção civil, realizamos projetos que abrangem desde pequenas reformas até grandes empreendimentos, sempre com qualidade e eficiência.</li>
+                    <li><span>Apoio Administrativo</span> Oferecemos serviços de apoio administrativo que permitem que nossos clientes se concentrem em suas atividades principais, enquanto cuidamos dos detalhes burocráticos.</li>
+                    <li><span>Logística</span> Nossa expertise em logística garante que os produtos cheguem ao destino de forma eficiente e segura, otimizando a cadeia de suprimentos.</li>
+                    <li><span>Locação de Veículos</span> Com uma frota diversificada de veículos, fornecemos opções de locação para atender às necessidades de transporte de nossos clientes.</li>
                 </ul>
             </div>
             <div class="img-list">
