--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/quemsomos/quemsomos.html">Quem somos</a></li>
                 <li><a href="pages/orcamento/orcamento.html">Orçamento</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="pages/contato/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
