--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/quemsomos/quemsomos.html">Quem somos</a></li>
-                <li><a href="pages/orcamento/orcamento.html">Orçamento</a></li>
+                <li><a href="pages/projetos/projetos.html">Projetos</a></li>
                 <li><a href="pages/contato/contato.html">Contato</a></li>
             </ul>
         </nav>
