--- a/pages/projetos/projetos.html
+++ b/pages/projetos/projetos.html
@@ -23,23 +23,24 @@
                 <li><a href="../../index.html" target="_parent">Home</a></li>
                 <li><a href="../quemsomos/quemsomos.html">Quem somos</a></li>
                 <li><a href="../projetos/projetos.html">Projetos</a></li>
-                <li><a href="./contato.html">Contato</a></li>
+                <li><a href="./../contato/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="section-a">
-        <div class="text-contato">
-            <h1>Contatos</h1>
-            <p>Entre em contato conosco através do e-mail <a href="#">comercial@fhmservicos.com</a> ou via WhatsApp <a href="#">27 997525063</a>. Não hesite em nos contatar. Estamos aqui para você!
-            </p>
-            <h3>Atenciosamente, FHM Serviços</h3>
+        <div class="text-works">
+            <h1>Conheça nossos trabalhos</h1>
         </div>
-        <div class="img-contato">
-            
+
+        <div class="img-works">
+            <div class="img" id="img-works1"></div>
+            <div class="img" id="img-works2"></div>
+            <div class="img" id="img-works3"></div>
+            <div class="img" id="img-works4"></div>
+            <div class="img" id="img-works5"></div>
+            <div class="img" id="img-works6"></div>
         </div>
     </section>
-
-    
 </body>
 </html>
