--- a/pages/quemsomos/quemsomos.html
+++ b/pages/quemsomos/quemsomos.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="../../index.html" target="_parent">Home</a></li>
                 <li><a href="./quemsomos.html">Quem somos</a></li>
-                <li><a href="../orcamento/orcamento.html">Orçamento</a></li>
+                <li><a href="../projetos/projetos.html">Projetos</a></li>
                 <li><a href="../contato/contato.html">Contato</a></li>
             </ul>
         </nav>
