--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
 
         <section class="section-c">
-            <a href="pages/orcamento/orcamento.html"><button>Solicite seu orçamento</button></a>
+            <a href="pages/contato/contato.html"><button>Entre em contato</button></a>
         </section>
     </main>
 
