--- a/pages/contato/contato.html
+++ b/pages/contato/contato.html
@@ -30,8 +30,8 @@
 
     <section class="section-a">
         <div class="text-contato">
-            <h1>Contatos</h1>
-            <p>Entre em contato conosco através do e-mail <a href="#">comercial@fhmservicos.com</a> ou via WhatsApp <a href="#">27 997525063</a>. Não hesite em nos contatar. Estamos aqui para você!
+            <h1>Fale Conosco</h1>
+            <p>Entre em contato conosco através do e-mail <a href="#">comercial@fhmservicos.com</a> ou via WhatsApp <a href="#">(27) 997525063</a>. Não hesite em nos contatar. Estamos aqui para você!
             </p>
             <h3>Atenciosamente, FHM Serviços</h3>
         </div>
