--- a/pages/quemsomos/quemsomos.html
+++ b/pages/quemsomos/quemsomos.html
@@ -44,6 +44,7 @@
                     <li><span>Apoio Administrativo</span> Oferecemos serviços de apoio administrativo que permitem que nossos clientes se concentrem em suas atividades principais, enquanto cuidamos dos detalhes burocráticos.</li>
                     <li><span>Logística</span> Nossa expertise em logística garante que os produtos cheguem ao destino de forma eficiente e segura, otimizando a cadeia de suprimentos.</li>
                     <li><span>Locação de Veículos</span> Com uma frota diversificada de veículos, fornecemos opções de locação para atender às necessidades de transporte de nossos clientes.</li>
+                    <li><span>Regularização Fundiária</span>Transformamos propriedades em lares, garantindo a segurança jurídica que você merece através dos nossos serviços de regularização fundiária.</li>
                 </ul>
             </div>
             <div class="img-list">
