--- a/pages/contato/contato.html
+++ b/pages/contato/contato.html
@@ -40,6 +40,22 @@
         </div>
     </section>
 
-    
+    <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768)  {
+                nav.style.display = 'block'
+            }else {
+                nav.style.display = 'none'
+            }
+        }
+
+        function clickMenu () {
+            if (nav.style.display == 'block') {
+                nav.style.display = 'none'
+            }else{
+                nav.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
